--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.9.0",
+    "@nuxt/icon": "^2.0.0",
+    "@tailwindcss/vite": "^4.1.12",
     "nuxt": "^4.0.3",
+    "tailwindcss": "^4.1.12",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.1",
+    "@iconify-json/tabler": "^1.2.22",
+    "daisyui": "^5.1.3",
     "eslint": "^9.34.0",
     "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-tailwindcss": "^4.0.0-beta.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6"
   },
