--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/icon": "^2.0.0",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.12",
     "nuxt": "^4.0.3",
     "tailwindcss": "^4.1.12",
