--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.14",
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/icon": "^2.0.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.12",
+    "drizzle-orm": "^0.44.5",
     "nuxt": "^4.0.3",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.20",
@@ -27,6 +29,7 @@
     "@antfu/eslint-config": "^5.2.1",
     "@iconify-json/tabler": "^1.2.22",
     "daisyui": "^5.1.3",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.34.0",
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-tailwindcss": "^4.0.0-beta.0",
