--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxt/icon": "^2.0.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.12",
+    "better-auth": "^1.3.7",
     "drizzle-orm": "^0.44.5",
     "nuxt": "^4.0.3",
     "tailwindcss": "^4.1.12",
