--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/icon": "^2.0.0",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.12",
     "better-auth": "^1.3.7",
     "drizzle-orm": "^0.44.5",
     "nuxt": "^4.0.3",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1",
